; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_clock.c_timeout.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_clock.c_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSEC_PER_SEC = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeout(i64 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @NSEC_PER_SEC, align 4
  %10 = load i32, i32* @hz, align 4
  %11 = sdiv i32 %9, %10
  %12 = call i32 @clock_interval_to_deadline(i32 %8, i32 %11, i32* %7)
  %13 = load i64, i64* %4, align 8
  %14 = trunc i64 %13 to i32
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @thread_call_func_delayed(i32 %14, i8* %15, i32 %16)
  ret void
}

declare dso_local i32 @clock_interval_to_deadline(i32, i32, i32*) #1

declare dso_local i32 @thread_call_func_delayed(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
